SLT_Handler/Include/MMC/MMCWFP39.h

INT API start_move( INT, double, double, INT);
INT API move( INT, double, double, INT);
INT API start_r_move( INT, double, double, INT);
INT API r_move( INT, double, double, INT);
INT API start_s_move( INT, double, double, INT);
INT API s_move( INT, double,double, INT);
INT API start_rs_move( INT, double, double, INT);
INT API rs_move( INT, double,double, INT);
INT API start_t_move( INT, double, double, INT, INT);
INT API t_move( INT, double,double, INT, INT);
INT API start_ts_move( INT, double, double, INT, INT);
INT API ts_move( INT, double,double, INT, INT);
INT API start_tr_move( INT, double, double, INT, INT);
INT API tr_move( INT, double,double, INT, INT);
INT API start_trs_move( INT, double, double, INT, INT);
INT API trs_move( INT, double,double, INT, INT);
INT API start_t_move_all( INT , pINT, pDOUBLE, pDOUBLE, pINT,pINT);
INT API t_move_all( INT, pINT, pDOUBLE,pDOUBLE, pINT, pINT);
INT API start_ts_move_all( INT , pINT, pDOUBLE, pDOUBLE, pINT,pINT);
INT API ts_move_all( INT, pINT, pDOUBLE,pDOUBLE, pINT, pINT);
INT API start_move_all( INT, pINT, pDOUBLE, pDOUBLE, pINT);
INT API move_all( INT, pINT, pDOUBLE, pDOUBLE, pINT);
INT API start_s_move_all( INT, pINT, pDOUBLE, pDOUBLE, pINT);
INT API s_move_all( INT, pINT, pDOUBLE, pDOUBLE, pINT);
INT API wait_for_done( INT);
INT API wait_for_all( INT, pINT);
INT API v_move( INT, double, INT);
INT API set_positive_sw_limit(INT, double, INT );
INT API get_positive_sw_limit(INT, pDOUBLE, pINT);
INT API set_negative_sw_limit(INT, double, INT);
INT API get_negative_sw_limit(INT, pDOUBLE, pINT);
INT API get_accel_limit(INT, pINT);
INT API set_accel_limit(INT, INT );
INT API fset_accel_limit(INT, INT );
INT API get_vel_limit(INT, pDOUBLE);
INT API set_vel_limit(INT, double );
INT API set_positive_limit(INT, INT );
INT API get_positive_limit(INT, pINT);
INT API set_negative_limit(INT, INT );
INT API get_negative_limit(INT, pINT);
INT API set_in_position(INT, double);
INT API get_in_position(INT, pDOUBLE);
INT API set_error_limit(INT, double, INT);
INT API get_error_limit(INT, pDOUBLE, pINT);
INT API set_positive_level(INT, INT );
INT API get_positive_level(INT, pINT);
INT API set_negative_level(INT, INT );
INT API get_negative_level(INT, pINT);
INT API home_switch(INT);
INT API pos_switch(INT);
INT API neg_switch(INT);
INT API amp_fault_switch(INT);
INT API set_io(INT, LONG);
INT API get_io(INT, pLONG);
INT API get_out_io(INT, pLONG);
INT API set_bit(INT);
INT API reset_bit(INT);
INT API get_gain(INT, pLONG);
INT API fget_gain(INT, pLONG);
INT API set_gain(INT, pLONG);
INT API fset_gain(INT, pLONG);
INT API get_v_gain(INT, pLONG);
INT API fget_v_gain(INT, pLONG);
INT API set_v_gain(INT, pLONG);
INT API fset_v_gain(INT, pLONG);
INT API fset_p_integration(INT ax, INT mode);
INT API fset_v_integration(INT ax, INT mode);
INT API fget_p_integration(INT, pINT);
INT API fget_v_integration(INT, pINT);
INT API set_p_integration(INT, INT);
INT API get_p_integration(INT, pINT);
INT API set_v_integration(INT, INT);
INT API get_v_integration(INT, pINT);
INT API set_amp_enable(INT,INT);
INT API get_amp_enable(INT,pINT);
INT API amp_fault_reset(INT);
INT API amp_fault_set(INT);
INT API set_amp_enable_level(INT,INT);
INT API get_amp_enable_level(INT,pINT);
INT API fget_amp_enable_level(INT,pINT);
INT API set_control(INT,INT);
INT API get_control(INT,pINT);
INT API set_electric_gear(INT, double);
INT API get_electric_gear(INT, pDOUBLE);
INT API fget_electric_gear(INT, pDOUBLE);
INT API set_step_mode(INT, INT);
INT API get_step_mode(INT, pINT);
INT API set_sync_map_axes(INT, INT);
INT API set_sync_control(INT);
INT API get_sync_control(pINT);
INT API set_sync_gain(LONG);
INT API fset_sync_gain(LONG syncgain);
INT API get_sync_gain(pLONG);
INT API fget_sync_gain(pLONG);
INT API compensation_pos(INT, pINT, pDOUBLE, pINT);
INT API set_pulse_ratio(INT,INT);
INT API fset_pulse_ratio(INT,INT);
INT API get_pulse_ratio(INT,pINT);
INT API set_stop(INT);
INT API set_stop_rate(INT, INT);
INT API get_stop_rate(INT, pINT);
INT API set_e_stop(INT);
INT API set_e_stop_rate(INT, INT);
INT API get_e_stop_rate(INT, pINT);